# spink7-klk5-md-pipeline-v3

./: .gitignore  LICENSE  Makefile  README.md  default_config.yaml  pyproject.toml  requirements.txt
latex/: final_report.tex
notebooks/: 00_structure_acquisition.ipynb  01_system_prep.ipynb  02_equilibration.ipynb  03_production_analysis.ipynb  04_smd_analysis.ipynb  05_umbrella_pmf.ipynb  06_visualization.ipynb  07_production_campaign.ipynb  08_convergence_analysis.ipynb  09_invariant_validation.ipynb  10_fep_validation.ipynb  11_spink7_mutagenesis.ipynb
reports/: full_implementation_report_v2.md  gpu_test_implementation_guide.md  project_overview.md
scripts/: cross_validate.py  generate_figures.py  generate_gpu_figures.py  run_analysis.py  run_equilibration.py  run_fep.py  run_msm.py  run_prep.py  run_production.py  run_smd.py  run_umbrella.py  test_optimized.sh
src/: __init__.py  config.py
tests/: __init__.py  colab_gpu_test.ipynb  conftest.py  test_collective_variables.py  test_config.py  test_contacts.py  test_convergence.py  test_cross_validate.py  test_data_flow.py  test_equilibrate.py  test_equilibration_detection.py  test_fep.py  test_finite_size.py  test_force_field_factory.py  test_generate_figures.py  test_integration.py  test_jarzynski.py  test_mbar.py  test_metadynamics.py  test_minimizer.py  test_msm.py  test_optimization_mode.py  test_pdb_clean.py  test_pdb_fetch.py  test_plot_pmf.py  test_plot_timeseries.py  test_production.py  test_protonate.py  test_restraints.py  test_smd.py  test_solvate.py  test_structural.py  test_topology.py  test_wham.py  (+4 more)
(+242 files in other folders)
